<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.plan8_ui.EventProfileActivity" >

    <item
        android:id="@+id/event_profile_back"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/event_profile_back"
        android:icon="@drawable/ic_arrow_back_white_36dp"/>
    
    <item
        android:id="@+id/event_profile_edit"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/event_profile_edit"
        android:icon="@drawable/ic_mode_edit_white_36dp"/>
    
    <item
        android:id="@+id/event_profile_delete"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/event_profile_delete"
        android:icon="@drawable/ic_delete_white_36dp"
        android:visible="false"/>
    
    <item
        android:id="@+id/event_profile_cancel"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/event_profile_cancel"
        android:icon="@drawable/ic_close_white_36dp"
        android:visible="false"/>
    
    <item
        android:id="@+id/event_profile_save"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/event_profile_save"
        android:icon="@drawable/ic_done_white_36dp"
        android:visible="false"/>
   
</menu>
