<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginBottom="3dp" >
		
			<TextView 
			    android:id="@+id/event_item_date_start_text_view" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="Nov 10, 2014"/>
			
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:layout_marginStart="5dp"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="@string/open_square_bracket"/>
			
			<TextView 
			    android:id="@+id/event_item_time_start_text_view" 
			    android:layout_marginStart="3dp"
			    android:layout_marginLeft="3dp"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="12:45" />
			
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:layout_marginStart="5dp"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="@string/close_square_bracket"/>
			
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:layout_marginStart="5dp"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="@string/dash"/>
			
			<TextView
				android:id="@+id/event_item_date_end_text_view"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:layout_marginStart="5dp"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="Nov 10, 2014"/>
    
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:layout_marginStart="5dp"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="@string/open_square_bracket"/>
			
			<TextView 
			    android:id="@+id/event_item_time_end_text_view"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:layout_marginStart="5dp"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="13:15"/>
			
			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:layout_marginStart="5dp"
			    android:textColor="@color/secondary_text"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:text="@string/close_square_bracket"/>
			
		</LinearLayout>
		
		<TextView 
		    android:id="@+id/event_item_title_text_view"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:maxLength="30"
		    android:ellipsize="marquee"
		    android:textColor="@color/primary_text"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="Mobicom Wireframe Presentation" />
		
		<TextView 
		    android:id="@+id/event_item_location_text_view" 
		    android:layout_marginTop="3dp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:maxLength="40"
		    android:textColor="@color/secondary_text"
		    android:textAppearance="?android:attr/textAppearanceSmall"
		    android:text="G301" />

	</TableLayout>

</android.support.v7.widget.CardView>
